# test_task_for_Aola

./: Django.postman_collection.json  README.md  pyproject.toml  setup.cfg
app/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/tests/: factories.py  tests.py
base/: .env.example  settings.py  urls.py
fixtures/: Achievement.json  Ad.json  Note.json  User.json
